<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.piotrek.kalkulator.MainActivity"
    android:background="#FF2E0456">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="false"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:id="@+id/eWynik"
            android:textSize="28sp"
            android:textStyle="bold"
            android:text="@string/eWynik"
            android:gravity="center|right"
            android:background="#e2e1e1"
            android:textColor="#000000"
            android:padding="5dp"
            android:maxLength="15" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/eError"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:gravity="center|right" />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="5"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="false"
            android:orientation="horizontal">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsC"
                    android:id="@+id/bC"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsBack"
                    android:id="@+id/bBack"
                    android:textStyle="bold"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsSqrt"
                    android:id="@+id/bSqrt"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsDodaj"
                    android:id="@+id/bDodaj"
                    android:textStyle="bold"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs7"
                    android:id="@+id/b7"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs8"
                    android:id="@+id/b8"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs9"
                    android:id="@+id/b9"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsOdejmij"
                    android:id="@+id/bOdejmij"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs4"
                    android:id="@+id/b4"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs5"
                    android:id="@+id/b5"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs6"
                    android:id="@+id/b6"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsPomnoz"
                    android:id="@+id/bPomnoz"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:id="@+id/b1"
                    android:text="@string/bs1"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs2"
                    android:id="@+id/b2"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs3"
                    android:id="@+id/b3"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsPodziel"
                    android:id="@+id/bPodziel"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsPrzecinek"
                    android:id="@+id/bPrzecinek"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bs0"
                    android:id="@+id/b0"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsPlusMinus"
                    android:id="@+id/bPlusMinus"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="70dp"
                    android:layout_height="65dp"
                    android:text="@string/bsRownaSie"
                    android:id="@+id/bRownaSie"
                    android:textStyle="bold"
                    android:textSize="24sp"/>
            </LinearLayout>

        </GridLayout>
    </LinearLayout>

</RelativeLayout>
